fixed a bug on the landing page that wasn't showing the navbar button after collapse (black on black background, and had to update jquery and bootstrap.js file versions

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -16,6 +16,10 @@ body {
   background-color: #000;
 }
 
+.fa-bars {
+  color: white;
+}
+
 html {
   width: 100%;
   height: 100%;
